# vsn1-cli

./: Cargo.toml  Makefile  README.md
.plan/: 01-current-context-and-open-questions.md  02-round-1-architecture-decisions.md  03-round-2-product-shape-decisions.md  04-round-3-implementation-decisions.md  05-proposed-architecture-and-implementation-plan.md  06-layered-display-runtime-design.md  07-layered-display-semantic-decisions.md  08-implementation-checklist.md  09-runtime-discovery-and-lifecycle-redesign.md  10-manifest-defined-runtime-layers-plan.md  11-global-fields-follow-up.md  12-daemon-capability-plan.md  13-daemon-implementation-checklist.md  14-grid-editor-file-manager-analysis.md  15-file-manager-backed-runtime-plan.md  16-runtime-fetch-from-module-plan.md
assets/runtime/2026-06-12-screen-first.1/: lcd-draw.lua  lcd-init.lua  manifest.toml
assets/runtime/2026-06-17-screen-first.2/: lcd-draw.lua  lcd-init.lua  manifest.toml
assets/runtime/2026-06-17-screen-first.3/: lcd-init.lua  manifest.toml
assets/runtime/2026-06-17-screen-first.4/: lcd-init.lua  manifest.toml
assets/runtime/2026-06-17-screen-first.5/: manifest.toml
assets/runtimes/default/: lcd-init.lua  (+1 more)
assets/services/: com.vsn1.vsn1-daemon.plist  vsn1-daemon.service
docs/: validation-matrix.md
src/: command_model.rs  daemon_client.rs  daemon_command_handler.rs  daemon_protocol.rs  daemon_server.rs  daemon_session.rs  daemon_socket.rs  debug.rs  device.rs  error.rs  lib.rs  main.rs  module_files.rs  protocol.rs  raw.rs  runtime.rs  runtime_bundle.rs  screen.rs  targeting.rs  transport.rs
(+13 files in other folders)
