[package]
name = "vsn1-cli"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[lib]
name = "vsn1_cli"
path = "src/lib.rs"

[[bin]]
name = "vsn1-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
serialport = "4.7"
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"
